@@ -1,0 +1,6 @@
+- name: vpc
+  type: group
+  description: >
+    `vpc` contains the metrics from Cloudwatch to track usage of VPC related resources.
+  release: beta
+  fields:
